# github-manager

./: .env.example  .gitignore  GitHubManager.desktop  README.md  generate-icon.sh  github-manager.sh  github-upload.sh  install-deps.sh  scripts_generate_icon.sh
github-manager-e2e/e2e-20260502184756-443905/local-git-source/: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  SECURITY.md  SUPPORT.md  local-git-upload.txt  pyproject.toml  pytest.ini  requirements-dev.txt
github-manager-e2e/e2e-20260502184756-443905/local-git-source/.devcontainer/: devcontainer.json
github-manager-e2e/e2e-20260502184756-443905/local-git-source/.github/: PULL_REQUEST_TEMPLATE.md  README.md
github-manager-e2e/e2e-20260502184756-443905/local-git-source/advice/: ROS2-Agent_Hermes对齐版全阶段执行蓝图（连续执行版）.md  ROS2-Agent_下一阶段重构路线图.md  ROS2-Agent_严厉批判式分析与改进建议.md  ROS2-Agent_全局优化总计划与新对话提示词.md  ROS2-Agent_全阶段总执行蓝图（连续执行版）.md  ROS2-Agent_新对话一次性全程执行提示词.md  ROS2-Agent_新对话一次性全程执行提示词_Hermes对齐版.md  ROS2-Agent_第一阶段实施计划_仅规划.md  ROS2-Agent_第三阶段实施计划_仅规划.md  ROS2-Agent_第二阶段实施计划_仅规划.md  ROS2-Agent_第四阶段实施计划_仅规划.md  ROS2-Agent_面向Hermes级能力对齐的全量重构总规划.md
github-manager-e2e/e2e-20260502184756-443905/local-git-source/benchmarks/: CONTRIBUTING.md  README.md  scoring.py
github-manager-e2e/e2e-20260502184756-443905/local-git-source/docs/: CHANGELOG.md
github-manager-e2e/e2e-20260502184756-443905/local-git-source/examples/: CONTRIBUTING.md
github-manager-e2e/e2e-20260502184756-443905/local-git-source/mcp/: README.md
(+461 files in other folders)
